fix mobile slider

--- a/mu-plugins/carkeek-blocks/src/blocks/slider-gallery/style.scss
+++ b/mu-plugins/carkeek-blocks/src/blocks/slider-gallery/style.scss
@@ -60,6 +60,7 @@
         width: 100%;
         height: 100%;
         background-size: cover;
+        background-position: 50% 50%;
     }
     .carkeek-slider-item__caption {
         position: absolute;
