--- a/themes/wp-rig-lazar/assets/css/src/content/_home.css
+++ b/themes/wp-rig-lazar/assets/css/src/content/_home.css
@@ -36,13 +36,20 @@
 
 		color: #fff;
 		text-shadow: -1px 1px 24px rgba(0, 0, 0, 1);
+		font-family: var(--header-font-family);
+		font-weight: 500;
+		font-size: 15px;
 
 		& h1 {
 			color: #fff;
-			text-align: center;
-			margin-bottom: 20px;
+			text-align: left;
+			margin-bottom: 0;
 			padding-top: 0;
 			white-space: nowrap;
+			line-height: 1.15;
+			font-size: 50px;
+			font-size: 14vw;
+
 		}
 	}
 }
@@ -53,7 +60,42 @@
 
 		& .wp-block-carkeek-blocks-slider__slide-overlay {
 			width: 80%;
-			max-width: 400px;
+
+			& h1 {
+				font-size: 75px;
+			}
+		}
+	}
+}
+
+@media (--tablet-up) {
+
+	.home {
+
+
+		& .wp-block-carkeek-blocks-slider__slide-overlay {
+			max-width: 530px;
+			margin-bottom: 30px;
+			font-size: 17px;
+
+			& h1 {
+				font-size: 87px;
+			}
+
+		}
+	}
+}
+
+@media (--tablet-wide-up) {
+
+	.home {
+
+
+		& .wp-block-carkeek-blocks-slider__slide-overlay {
+			width: 50%;
+			max-width: 600px;
+			margin-bottom: 0;
+
 		}
 	}
 }
@@ -62,8 +104,20 @@
 
 	.home {
 
+
 		& .wp-block-carkeek-blocks-slider__slide-overlay {
-			max-width: 570px;
+			width: 39%;
+			max-width: 800px;
+			margin-bottom: 0;
+			font-size: 25px;
+			font-size: 1.3vw;
+
+			& h1 {
+				font-size: 120px;
+				font-size: 6.25vw;
+			}
+
+
 		}
 	}
 }
