--- a/themes/wp-rig-lazar/assets/css/src/global.css
+++ b/themes/wp-rig-lazar/assets/css/src/global.css
@@ -21,6 +21,7 @@
 # Imports
 --------------------------------------------------------------*/
 @import "global/_fontello.css";
+@import "global/_fonts.css";
 @import "global/_custom-properties.css";
 @import "global/_reset.css";
 @import "global/_global-styles.css";
