--- a/themes/wp-rig-lazar/assets/css/src/content/_home.css
+++ b/themes/wp-rig-lazar/assets/css/src/content/_home.css
@@ -25,7 +25,7 @@
 
 	& .wp-block-carkeek-blocks-slider__slide-overlay {
 		position: absolute;
-		bottom: 0;
+		bottom: 10%;
 		left: 50%;
 		transform: translate(-50%, 0);
 		padding-bottom: 2rem;
@@ -42,13 +42,12 @@
 
 		& h1 {
 			color: #fff;
-			text-align: left;
+			text-align: center;
 			margin-bottom: 0;
 			padding-top: 0;
-			white-space: nowrap;
 			line-height: 1.15;
-			font-size: 50px;
-			font-size: 14vw;
+			font-size: 78px;
+			font-size: 21vw;
 
 		}
 	}
@@ -60,9 +59,11 @@
 
 		& .wp-block-carkeek-blocks-slider__slide-overlay {
 			width: 80%;
+			bottom: 15%;
 
 			& h1 {
-				font-size: 75px;
+				font-size: 80px;
+				white-space: nowrap;
 			}
 		}
 	}
@@ -74,7 +75,6 @@
 
 
 		& .wp-block-carkeek-blocks-slider__slide-overlay {
-			max-width: 530px;
 			margin-bottom: 30px;
 			font-size: 17px;
 
@@ -92,8 +92,7 @@
 
 
 		& .wp-block-carkeek-blocks-slider__slide-overlay {
-			width: 50%;
-			max-width: 600px;
+			width: auto;
 			margin-bottom: 0;
 
 		}
