--- a/themes/wp-rig-lazar/assets/css/src/global/_navigation.css
+++ b/themes/wp-rig-lazar/assets/css/src/global/_navigation.css
@@ -310,7 +310,7 @@ html.overflow-hidden {
 	&.current-menu-parent,
 	&.current-menu-item {
 
-		& a {
+		& > a {
 			text-decoration: none;
 			color: var(--color-theme-nav);
 
