--- a/themes/wp-rig-lazar/assets/css/src/content/_ck-blocks-overrides.css
+++ b/themes/wp-rig-lazar/assets/css/src/content/_ck-blocks-overrides.css
@@ -6,19 +6,33 @@
 .slick-prev {
 	height: 50px;
 	width: 50px;
+	top: 90%;
 
 	&::before {
-		font-size: 50px;
+		height: 100%;
+		width: 100%;
+		background-size: 50px 50px;
+		background-repeat: no-repeat;
+		display: block;
 	}
 }
 
-.slick-next::before {
-	content: "\e80c";
+.slick-next {
+
+	&::before {
+		background-image: url(../images/arrow_right.png);
+		content: "";
+	}
 }
 
-.slick-prev::before {
-	content: "\e80d";
+.slick-prev {
+
+	&::before {
+		background-image: url(../images/arrow_left.png);
+		content: "";
+	}
 }
+
 
 .slick-dots {
 	text-align: center;
@@ -95,6 +109,29 @@
 	.slick-dots {
 		text-align: right;
 		padding-right: 50px;
+	}
+
+	.slick-next,
+	.slick-prev {
+		height: 100px;
+		width: 100px;
+		top: 50%;
+
+		&::before {
+			height: 100%;
+			width: 100%;
+			background-size: 100px 100px;
+			background-repeat: no-repeat;
+			display: block;
+		}
+	}
+
+	.slick-next {
+		right: 0;
+	}
+
+	.slick-prev {
+		left: -10px;
 	}
 
 }
