--- a/plugins/carkeek-site-blocks-mapped-posts/src/mapped-post-block/style.scss
+++ b/plugins/carkeek-site-blocks-mapped-posts/src/mapped-post-block/style.scss
@@ -1,11 +1,7 @@
 :root {
     --am-map-height: 650px;
     --am-list-width: 0;
-    --color-theme-green: #21bf73;
-    --color-theme-blue: #41a7b3;
-    --color-icon-orange: #d85609;
-    --color-icon-green: #0e854e;
-    --color-icon-blue: #473892;
+	--form-control-color: var(--wp--preset--color--primary);
 }
 
 .wp-block-carkeek-blocks-mapped-posts-block,
@@ -22,369 +18,277 @@
 .archive-map-wrapper {
     position: relative;
 
-    .archive-filter-reset {
-        padding: 10px;
-        background-color: transparent;
-        border: none;
-        text-decoration: underline;
-        color: var(--color-link);
-    }
-
     .archive-map {
         position: relative;
-    }
-
-    .archive-filter-list {
-        font-size: 16px;
-        margin-top: 1rem;
-        margin-left: calc(-1 * var(--gutter-width) / 2);
-        margin-right: calc(-1 * var(--gutter-width) / 2);
-
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        input[type="checkbox"] {
-            -webkit-appearance: none;
-            background-color: #fff;
-            border: 1px solid var(--color-theme-grey-med-light);
-            height: 16px;
-            width: 16px;
-            display: inline-block;
-            position: relative;
-            margin-right: 5px;
-            margin-bottom: 2px;
-			flex: 0 0 16px;
-            &:checked {
-                &:after {
-                    content: "\f00c";
-                    font-family: var(--font-family-icon);
-                    font-size: 13px;
-                    position: absolute;
-                    left: 1px;
-                    top: -1px;
-                }
-            }
-        }
-        .archive-filters > li > input[type="checkbox"] {
-            margin-bottom: 0;
-        }
-		.archive-filter-header {
-			display: flex;
-			margin-bottom: 1rem;
-			justify-content: space-between;
-			& h2 {
-				margin-bottom: 0;
-			}
-		}
-        .archive-filters {
-            display: grid;
-            align-items: start;
-            grid-template-areas:
-                "science education"
-                "science stewardship";
-            & > li > label {
-                font-weight: var(--font-weight-bold);
-            }
-            & label {
-                display: inline-flex;
-                align-items: flex-start;
-            }
-            & ul {
-                margin-top: 10px;
-            }
-			& ul li {
-				display: flex;
-			}
-            & h2 {
-                grid-area: header-left;
-            }
-            & button {
-                grid-area: header-right;
-            }
-        }
-
-        .filter-citizen-science {
-            grid-area: science;
-            & .archive-filter-icon {
-                background-color: var(--color-icon-blue);
-            }
-        }
-        .filter-education {
-            grid-area: education;
-
-            & .archive-filter-icon {
-                background-color: var(--color-icon-orange);
-            }
-        }
-        .filter-stewardship {
-            grid-area: stewardship;
-            & .archive-filter-icon {
-                background-color: var(--color-icon-green);
-            }
-        }
     }
 
     .leaflet-container {
         width: 100%;
         height: var(--am-map-height);
     }
-
-    .map-details {
-        background-color: #fff;
-        &.is-loading {
-            background-color: #ccc;
-            opacity: 0.7;
-        }
-        & header {
-            background-color: var(--wp--preset--color--grey-dark);
-            color: var(--wp--preset--color--yellow);
-            font-size: 16px;
-            font-style: italic;
-            font-weight: var(--font-weight-bold);
-            padding: 0.5rem 1rem;
-            position: relative;
-            & button {
-                border: none;
-                padding: 0 10px;
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                height: 100%;
-                background-color: var(--wp--preset--color--yellow);
-                color: var(--wp--preset--color--grey-dark);
-            }
-        }
-        & figure {
-            margin-bottom: 0;
-        }
-        & .project-title {
-            background-color: var(--wp--preset--color--grey-dark);
-            font-size: 18px;
-            text-align: center;
-            padding: 1rem;
-            margin-bottom: 0;
-            & a {
-                color: #fff;
-            }
-        }
-        & .project-details {
-            padding: 1rem;
-            font-size: 15px;
-            height: 100%;
-            overflow-y: auto;
-        }
-
-        & .project-facts-number {
-            color: var(--wp--preset--color--teal-med);
-            font-weight: var(--font-weight-bold);
-            font-size: 36px;
-            margin-bottom: 0;
-        }
-        & .project-location {
-            color: var(--wp--preset--color--teal-med);
-            font-weight: var(--font-weight-bold);
-            font-style: italic;
-            font-size: 18px;
-        }
-        & .project-facts-title {
-            font-size: 16px;
-            font-style: italic;
-            margin-bottom: 0;
-        }
-
-        & .project-facts {
-            margin-top: 1rem;
-        }
-    }
-
-	.leaflet-popup-content-wrapper,
-	.leaflet-popup-tip {
-		background-color: #323e48;
-		color: #fff;
-	}
 }
 
 .archive-map-top {
-    padding-left: var(--gutter-width);
-    padding-right: var(--gutter-width);
     margin: 0 auto;
+	padding: var(--wp--preset--spacing--70) 0;
     max-width: var(--content-width-wide);
+	display: flex;
+	flex-direction: column;
+	gap: var(--wp--preset--spacing--30);
 }
-.archive-map-intro {
-	padding-bottom: 3rem;
+.archive-map-intro,
+.archive-map-filters {
+	display: flex;
+	flex-direction: column;
+	gap: var(--wp--preset--spacing--30);
 }
+
+.archive-map-filters {
+	font-family: var(--wp--preset--font-family--headings-sans);
+	& fieldset {
+		border: none;
+		margin: 0;
+		padding: 0;
+			&.radio-view-mode {
+				& legend {
+					font-size: 1.4375rem;
+					margin-bottom: 0.5rem;
+				}
+			}
+		}
+
+	& .archive-search-list {
+		& input {
+			padding: 0 !important;
+			&:focus-visible {
+				outline: none !important;
+			}
+		}
+		.react-select__control {
+			padding: 4px 10px;
+		}
+		.react-select__option {
+			padding: 8px 12px;
+		}
+		.react-select__option--is-selected,
+		.react-select__option--is-focused {
+			background-color: var(--wp--preset--color--secondary);
+			color: #fff;
+		}
+		.css-b62m3t-container {
+			z-index: 2000;
+		}
+		& > label > span {
+			border: 0;
+			clip: rect(1px, 1px, 1px, 1px); /* For older browsers */
+			clip-path: inset(50%); /* Modern approach */
+			height: 1px;
+			width: 1px;
+			margin: -1px;
+			overflow: hidden;
+			padding: 0;
+			position: absolute;
+			white-space: nowrap; /* Prevents text from wrapping and potentially becoming visible */
+		}
+	}
+}
+
+@media (min-width: 768px) {
+	.archive-map-filters {
+		fieldset {
+			&.radio-view-mode {
+			display: flex;
+			gap: 1rem;
+
+				& .archive-filters-list {
+					flex-direction: row;
+					display: flex;
+					gap: 1rem;
+					line-height: 1.84;
+				}
+			}
+		}
+
+	}
+	.archive-filters-content {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: var(--wp--preset--spacing--50);
+	}
+	.archive-filter-reset {
+		align-self: flex-start;
+		justify-self: flex-start;
+		background-color: #fff;
+		color: var(--wp--preset--color--primary);
+		&:hover {
+			background-color: var(--wp--preset--color--accent);
+			color: #fff;
+		}
+	}
+}
+
+@media (min-width: 1024px) {
+	.archive-map-filters {
+		align-items: center;
+		fieldset {
+			legend {
+				float: left;
+			}
+		}
+	}
+	.archive-filters-content {
+		grid-template-columns: 1fr 165px;
+		& > :first-child {
+			min-width: 400px;
+		}
+	}
+}
+
+
+
+ul.archive-filters-list {
+
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		& li {
+			display: grid;
+			grid-template-columns: 1em auto;
+			align-items: center;
+			gap: 0.5em;
+		}
+
+		input[type="radio"],
+		input[type="checkbox"] {
+			appearance: none;
+			-webkit-appearance: none;
+			background-color: #fff;
+			font: inherit;
+			color: #BEBEBE;
+			width: 1.15em;
+			height: 1.15em;
+			border: 0.05em solid #BEBEBE;
+
+			transform: translateY(-0.075em);
+			display: grid;
+  			place-content: center;
+		}
+
+		input[type="radio"] {
+			border-radius: 50%;
+			&::before {
+				content: "";
+				width: 0.65em;
+				height: 0.65em;
+				border-radius: 50%;
+				transform: scale(0);
+				transition: 120ms transform ease-in-out;
+				box-shadow: inset 1em 1em var(--form-control-color);
+			}
+			&:checked::before {
+				transform: scale(1);
+			}
+		}
+
+        input[type="checkbox"] {
+			&::before {
+				content: "";
+				width: 0.65em;
+				height: 0.65em;
+				transform: scale(0);
+				transition: 120ms transform ease-in-out;
+				box-shadow: inset 1em 1em var(--form-control-color);
+			}
+			&:checked::before {
+				transform: scale(1);
+			}
+
+    	}
+}
+
 
 .archive-filter-icon {
     display: inline-block;
-    height: 20px;
-    width: 20px;
-    margin-right: 5px;
-	flex: 1 0 20px;
 }
 
-.leaflet-marker-icon,
-.archive-filter-icon {
-    border-radius: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-
-    &.citizen-science {
-        background-color: var(--color-icon-blue);
-    }
-    &.education {
-        background-color: var(--color-icon-orange);
-    }
-    &.stewardship {
-        background-color: var(--color-icon-green);
-    }
-    &.birds {
-        background-image: url(img/icon-cs-birds.svg);
-    }
-    &.crab {
-        background-image: url(img/icon-cs-crab.svg);
-    }
-    &.fish {
-        background-image: url(img/icon-cs-fish.svg);
-    }
-    &.invasive-species {
-        background-image: url(img/icon-cs-invasive-species.svg);
-    }
-    &.marine-flora {
-        background-image: url(img/icon-cs-marine-flora.svg);
-    }
-    &.nearshore {
-        background-image: url(img/icon-cs-nearshore.svg);
-    }
-    &.water-quality {
-        background-image: url(img/icon-cs-water-droplet.svg);
-    }
-    &.state-parks {
-        background-image: url(img/icon-edu-person.svg);
-    }
-    &.beach-clean-up {
-        background-image: url(img/icon-stw-beach-clean-up.svg);
-    }
-    &.fishing-line {
-        background-image: url(img/icon-stw-fish-hook.svg);
-    }
-    &.wharf-display {
-        background-image: url(img/icon-edu-whale-wharf.svg);
-    }
-    &.public-education-events {
-        background-image: url(img/icon-edu-edu-events.svg);
-    }
-	&.shoreline-signage {
-        background-image: url(img/icon-stw-signage.svg);
-    }
-}
-
-@media screen and (min-width: 600px) {
-    .archive-map-wrapper {
-        .archive-filter-list {
-            margin-right: 0;
-            margin-left: 0;
-        }
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .archive-map-wrapper {
-        .archive-map-top {
-            display: flex;
-            & > * {
-                width: 50%;
-            }
-        }
-        .archive-map-intro {
-            padding-right: var(--gutter-width);
-        }
-        .archive-filter-list {
-            margin-top: 0;
-        }
-        .archive-filters ul {
-            margin-left: 1rem;
-        }
-        .map-details {
-            & figure {
-                height: 170px;
-                position: relative;
-                & img {
-                    height: 100%;
-                    width: 100%;
-                    object-fit: cover;
-                }
-            }
-            .project-details {
-                height: calc(100% - 263px);
-                overflow-y: auto;
-            }
-        }
-    }
-}
-
-.leaflet-marker-icon.has-shadow > span:after {
-    content: "";
-    background-color: rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.3);
-    display: block;
-    height: 3px;
-    width: 20px;
-    border-radius: 100%;
-    transform: rotate(-15deg);
-    position: absolute;
-    left: 17px;
-    bottom: -7px;
-}
-
-
-.leaflet-popup-content-wrapper {
-    .map-archive-popup {
-        width: 215px;
-        font-family: var(--font-family-global);
-        font-size: 14px;
-
-        h2 {
-            font-size: 18px;
-        }
-        img {
-            width: 100%;
-            height: auto;
-        }
-        .popup-title {
-            display: block;
-            font-size: 16px;
-            font-style: italic;
-        }
-
-        .popup-link {
-            display: block;
-            font-size: 18px;
-            color: #fff;
-            margin-bottom: 1rem;
-        }
-        .wp-block-mapped-posts-archive__text-link {
-            font-size: 18px;
-            padding-top: 0.25rem;
-            padding-bottom: 0.25rem;
-            font-weight: var(--font-weight-bold);
-            display: block;
-        }
-        a.wp-block-mapped-posts-archive__text-link {
-            color: var(--color-theme-green);
-            &:hover {
-                color: var(--color-theme-green-light-links);
-            }
-        }
-    }
+.leaflet-marker-icon {
+	&.icon-private {
+		svg path.marker {
+			fill: #264D53;
+		}
+	}
 }
 
 
 .archive-map-wrapper {
+.leaflet-popup-content-wrapper {
+	border-radius: 0;
+	padding: 0;
+	width: 325px;
+	& .leaflet-popup-content {
+		margin: 0;
+	}
+    .map-archive-popup {
+        font-family: var(--wp--preset--font-family--global);
+        font-size: 1.375rem;
+		.popup-link {
+			color: var(--wp--preset--color--accent)
+		}
+
+		.popup-image {
+			width: 100%;
+			aspect-ratio: 4 /3;
+			background-size: cover;
+			background-position: center;
+		}
+
+        .popup-content {
+			padding: 1.875rem;
+
+		}
+		.popup-data {
+			margin-top: 0.5rem;
+			color: var(--wp--preset--color--primary);
+			font-weight: 500;
+		}
+
+		.popup-label {
+			display: flex;
+			align-items: center;
+			& > span {
+				display: inline-block;
+				width: 1.5rem;
+				height: 1.5rem;
+				margin-right: 0.5rem;
+				vertical-align: middle;
+				mask-size: contain;
+				mask-repeat: no-repeat;
+				mask-position: center;
+				background-color: currentColor;
+
+				&.popup-location {
+					mask-image: url('img/icon-location.svg');
+				}
+				&.popup-acreage {
+					mask-image: url('img/icon-acreage.svg');
+				}
+				&.popup-access {
+					mask-image: url('img/icon-access.svg');
+				}
+			}
+		}
+
+    }
+}
+}
+
+
+.archive-map-wrapper {
+
+	.leaflet-container a.leaflet-popup-close-button {
+		background-color: var(--wp--preset--color--accent);
+		color: #fff;
+	}
     .leaflet-bar {
         border-radius: 0;
         box-shadow: none;
@@ -409,27 +313,27 @@
     }
 
 	.marker-cluster-small {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster-small div {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster-medium {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster-medium div {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster-large {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster-large div {
-		background-color: rgba(0, 125, 132, 0.6);
+		background-color: rgba(37, 77, 83, 0.6);
 	}
 
 	.marker-cluster div {
@@ -438,20 +342,4 @@
 	}
 }
 
-@media screen and (min-width: 1024px) {
-    .archive-map-wrapper {
-        .map-details {
-            position: absolute;
-            top: 0;
-            right: 0;
-            transform: translateX(300px);
-            transition: transform 0.3s ease;
-            width: 300px;
-            height: 100%;
 
-            &.show-details {
-                transform: translateX(0px);
-            }
-        }
-    }
-}
