--- a/themes/wp-rig/assets/css/global/src/_header.css
+++ b/themes/wp-rig/assets/css/global/src/_header.css
@@ -83,6 +83,7 @@
 		& button {
 			border: none;
 			color: var(--wp--preset--color--tint-dark);
+			background: transparent;
 		}
 		& input[type="text"] {
 			border: none;
