--- a/themes/wp-rig/assets/css/global/src/_theme-styles.css
+++ b/themes/wp-rig/assets/css/global/src/_theme-styles.css
@@ -161,3 +161,48 @@ ul.ck-blocks-gallery-grid.fixed-images li.ck-blocks-gallery-grid-item img {
 	}
 
 }
+
+
+.wp-block-carkeek-blocks-custom-archive.is-list {
+	& .ck-columns-item {
+		border-bottom: 2px solid var(--wp--preset--color--gray-300);
+		padding-bottom: var(--wp--preset--spacing--50);
+		margin-bottom: var(--wp--preset--spacing--50);
+		&:first-child {
+			padding-top: var(--wp--preset--spacing--50);
+			border-top: 2px solid var(--wp--preset--color--gray-300);
+		}
+		& .ck-custom-archive-title-header {
+			margin: 0;
+			& a {
+				color: $primary;
+				font-size: var(--font-size-h3);
+				font-family: var(--wp--preset--font-family--headings-sans);
+			}
+		}
+		& .ck-custom-archive-item-date {
+			font-family: var(--wp--preset--font-family--headings-sans);
+			margin-bottom: 1rem;
+			display: block;
+		}
+	}
+}
+@media (--tablet-up) {
+	.wp-block-carkeek-blocks-custom-archive.is-list {
+		& .ck-columns-item {
+			flex-direction: row-reverse;
+			gap: var(--wp--preset--spacing--50);
+			align-items: center;
+		}
+	}
+}
+@media (--desktop-up) {
+	.wp-block-carkeek-blocks-custom-archive.is-list {
+		& .ck-custom-archive-image-link {
+			flex: 1 1 40%;
+		}
+		& .ck-custom-archive__content-wrap {
+			flex: 1 1 60%;
+		}
+	}
+}
