--- a/themes/wp-rig/assets/css/global/src/_custom-properties.css
+++ b/themes/wp-rig/assets/css/global/src/_custom-properties.css
@@ -37,6 +37,7 @@
 
 	--global-text-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
 	--color-error: #cf2e2e;
+	--form-control-color: #6e7b23;
 	--color-quote-border: #000;
 	--color-quote-citation: #6c7781;
 	--color-caption: #6c7781;
