--- a/themes/wp-rig/assets/css/global/src/_fontello.css
+++ b/themes/wp-rig/assets/css/global/src/_fontello.css
@@ -1,32 +1,26 @@
 @font-face {
-	font-family: carkeek-blocks;
-	src: url(../../fonts/carkeek-blocks.eot?68146904);
-	src:
-		url(../../fonts/carkeek-blocks.eot?68146904#iefix) format("embedded-opentype"),
-		url(../../fonts/carkeek-blocks.woff2?68146904) format("woff2"),
-		url(../../fonts/carkeek-blocks.woff?68146904) format("woff"),
-		url(../../fonts/carkeek-blocks.ttf?68146904) format("truetype"),
-		url(../../fonts/carkeek-blocks.svg?68146904#carkeek-blocks) format("svg");
-	font-weight: 400;
+	font-family: 'carkeek-blocks';
+	src: url(../../fonts/carkeek-blocks.eot?8214548);
+	src: url(../../fonts/carkeek-blocks.eot?8214548#iefix) format(embedded-opentype),
+		url(../../fonts/carkeek-blocks.woff2?8214548) format(woff2),
+		url(../../fonts/carkeek-blocks.woff?8214548) format(woff),
+		url(../../fonts/carkeek-blocks.ttf?8214548) format(truetype),
+		url(../../fonts/carkeek-blocks.svg?8214548#carkeek-blocks) format(svg);
+	font-weight: normal;
 	font-style: normal;
 }
-
-
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-
 /*
-  @media screen and (-webkit-min-device-pixel-ratio:0) {
-	@font-face {
-	  font-family: 'carkeek-blocks';
-	  src: url('../../fonts/carkeek-blocks.svg?68146904#carkeek-blocks') format('svg');
-	}
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'carkeek-blocks';
+    src: url('../../fonts/carkeek-blocks.svg?8214548#carkeek-blocks') format('svg');
   }
-  */
-[class^="icon-"]::before,
-[class*=" icon-"]::before {
-	font-family: carkeek-blocks;
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "carkeek-blocks";
 	font-style: normal;
 	font-weight: 400;
 	speak: never;
@@ -63,112 +57,43 @@
 
 	/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-
-.icon-mail::before {
-	content: "\e800";
-} /* '' */
-.icon-calendar::before {
-	content: "\e801";
-} /* '' */
-.icon-left-open::before {
-	content: "\e802";
-} /* '' */
-.icon-search::before {
-	content: "\e803";
-} /* '' */
-.icon-up-open::before {
-	content: "\e804";
-} /* '' */
-.icon-down-open::before {
-	content: "\e805";
-} /* '' */
-.icon-plus::before {
-	content: "\e806";
-} /* '' */
-.icon-minus::before {
-	content: "\e807";
-} /* '' */
-.icon-plus-light::before {
-	content: "\e808";
-} /* '' */
-.icon-minus-light::before {
-	content: "\e809";
-} /* '' */
-.icon-ok::before {
-	content: "\e80a";
-} /* '' */
-.icon-lock::before {
-	content: "\e80b";
-} /* '' */
-.icon-basket::before {
-	content: "\e80c";
-} /* '' */
-.icon-right-open::before {
-	content: "\e80d";
-} /* '' */
-.icon-print::before {
-	content: "\e80e";
-} /* '' */
-.icon-down-dir::before {
-	content: "\e80f";
-} /* '' */
-.icon-up-dir::before {
-	content: "\e810";
-} /* '' */
-.icon-left-dir::before {
-	content: "\e811";
-} /* '' */
-.icon-right-dir::before {
-	content: "\e812";
-} /* '' */
-.icon-twitter::before {
-	content: "\f099";
-} /* '' */
-.icon-facebook::before {
-	content: "\f09a";
-} /* '' */
-.icon-linkedin::before {
-	content: "\f0e1";
-} /* '' */
-.icon-angle-left::before {
-	content: "\f104";
-} /* '' */
-.icon-angle-right::before {
-	content: "\f105";
-} /* '' */
-.icon-angle-up::before {
-	content: "\f106";
-} /* '' */
-.icon-angle-down::before {
-	content: "\f107";
-} /* '' */
-.icon-circle-empty::before {
-	content: "\f10c";
-} /* '' */
-.icon-circle::before {
-	content: "\f111";
-} /* '' */
-.icon-info::before {
-	content: "\f129";
-} /* '' */
-.icon-angle-circled-left::before {
-	content: "\f137";
-} /* '' */
-.icon-angle-circled-right::before {
-	content: "\f138";
-} /* '' */
-.icon-lock-open-alt::before {
-	content: "\f13e";
-} /* '' */
-.icon-youtube::before {
-	content: "\f16a";
-} /* '' */
-.icon-instagram::before {
-	content: "\f16d";
-} /* '' */
-.icon-dot-circled::before {
-	content: "\f192";
-} /* '' */
-.icon-pinterest::before {
-	content: "\f231";
-} /* '' */
+.icon-mail:before { content: '\e800'; } /* '' */
+.icon-calendar:before { content: '\e801'; } /* '' */
+.icon-left-open:before { content: '\e802'; } /* '' */
+.icon-search:before { content: '\e803'; } /* '' */
+.icon-up-open:before { content: '\e804'; } /* '' */
+.icon-down-open:before { content: '\e805'; } /* '' */
+.icon-plus:before { content: '\e806'; } /* '' */
+.icon-minus:before { content: '\e807'; } /* '' */
+.icon-plus-light:before { content: '\e808'; } /* '' */
+.icon-minus-light:before { content: '\e809'; } /* '' */
+.icon-ok:before { content: '\e80a'; } /* '' */
+.icon-lock:before { content: '\e80b'; } /* '' */
+.icon-basket:before { content: '\e80c'; } /* '' */
+.icon-right-open:before { content: '\e80d'; } /* '' */
+.icon-print:before { content: '\e80e'; } /* '' */
+.icon-down-dir:before { content: '\e80f'; } /* '' */
+.icon-up-dir:before { content: '\e810'; } /* '' */
+.icon-left-dir:before { content: '\e811'; } /* '' */
+.icon-right-dir:before { content: '\e812'; } /* '' */
+.icon-bluesky:before { content: '\e813'; } /* '' */
+.icon-x-twitter:before { content: '\e814'; } /* '' */
+.icon-right-open-1:before { content: '\f006'; } /* '' */
+.icon-left-open-1:before { content: '\f007'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-angle-left:before { content: '\f104'; } /* '' */
+.icon-angle-right:before { content: '\f105'; } /* '' */
+.icon-angle-up:before { content: '\f106'; } /* '' */
+.icon-angle-down:before { content: '\f107'; } /* '' */
+.icon-circle-empty:before { content: '\f10c'; } /* '' */
+.icon-circle:before { content: '\f111'; } /* '' */
+.icon-info:before { content: '\f129'; } /* '' */
+.icon-angle-circled-left:before { content: '\f137'; } /* '' */
+.icon-angle-circled-right:before { content: '\f138'; } /* '' */
+.icon-lock-open-alt:before { content: '\f13e'; } /* '' */
+.icon-youtube:before { content: '\f16a'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-dot-circled:before { content: '\f192'; } /* '' */
+.icon-pinterest:before { content: '\f231'; } /* '' */
