--- a/themes/wp-rig/assets/css/global/src/_single.css
+++ b/themes/wp-rig/assets/css/global/src/_single.css
@@ -13,21 +13,21 @@
 	}
 
 	& .entry-header {
-		margin-bottom: $spacingDefault;
-	}
-
-	& .entry-date {
-		font-size: 0.875rem;
-		text-transform: uppercase;
-		letter-spacing: 0.1em;
-	}
-
-	& .entry-title {
-
-		& h1 {
-			margin-top: 0;
-			font-size: var(--font-size-h1-alt);
+		margin-bottom: $spacingSmall;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		& .entry-parent-link {
+			color: $primary;
 		}
+		& h1 {
+			margin: 0;
+		}
+	}
+
+	& .entry-meta {
+		font-size: 1.375rem;
+		font-family: var(--wp--preset--font-family--headings-sans)
 	}
 
 	&::after {
@@ -37,7 +37,21 @@
 	}
 }
 
+@media (--tablet-small-up) {
+	.single-entry {
 
+		& .entry-meta {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+	}
+}
 
-
+@media screen and (min-width: 1400px) {
+	.single-entry {
+		--content-width: 54vw;
+		--content-width-wide: 60vw;
+	}
+}
 
